# RSEAdmin

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  README.md  README_DOCKER.md  codecov.yml  db.sqlite3  dev.env  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements.yml  stack.yml
.github/workflows/: ci.yml
RSEAdmin/: settings.py  urls.py  wsgi.py
RSEAdmin/settings/: base.py  dev.py  pythonanywhere.py
RSEAdmin/templatetags/: site_tags.py
docker/app/: Dockerfile  django-entrypoint.sh  django_settings_deployed.py
docker/db/: initdb.sh
docs/: conf.py  index.rst
docs/financialyears/: index.rst
docs/projects/: index.rst
docs/reporting/: index.rst
docs/team/: index.rst
docs/timetracking/: index.rst
docs/users/: index.rst
rse/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
rse/migrations/: 0001_initial.py  0002_auto_20180919_1612.py  0002_auto_20190705_1700.py  0002_auto_20190722_1633.py  0002_auto_20191122_1505.py  0003_auto_20180920_1346.py  0003_auto_20191124_1935.py  0003_project_polymorphic_ctype.py  0004_auto_20180930_1537.py  0004_auto_20190715_1117.py  0004_auto_20191124_1946.py  0005_allocatedproject_salary_band.py  0005_auto_20180930_1548.py  0005_auto_20191127_1522.py  0006_auto_20180930_1558.py  0006_remove_rse_employed_from.py  0007_auto_20180930_1611.py  0007_auto_20230724_1726.py  0008_alter_directlyincurredproject_percentage.py  0008_auto_20180930_1613.py  0009_auto_20190607_1338.py  0009_auto_20230728_1218.py  0010_alter_serviceproject_days.py  0010_auto_20190607_1521.py  0011_auto_20190607_1623.py
rse/templates/: _base.html  allocations_recent.html  changepassword.html  client.html  client_new.html  clients.html  commitments.html  costdistribution.html  costdistributions.html  financial_summary.html  financialyear.html  financialyear_edit.html  financialyear_new.html  financialyears.html  index.html  index_admin.html  index_rse.html  login.html  project.html  project_allocated_new.html  project_allocations.html  project_allocations_edit.html  project_directly_incurred_new.html  project_new.html  project_service_new.html  project_staffcosts.html  project_view.html  projectincome_summary.html  projects.html  projects_income_summary.html  projects_internal_summary.html  rse.html  rse_salary.html  rse_staffcost.html  rse_view.html  rses.html  (+11 more)
rseadmin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: db_init.sh
timetracking/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+38 files in other folders)
