[tool.poetry]
name = "rseadmin"
version = "0.1.0"
description = "RSE Admin Resource Allocation and Finance tool"
authors = ["Paul Richmond <p.richmond@sheffield.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
Django = "~3.0"
django-adminlte2 = "~0.4.1"
django-polymorphic = "~2.1"
gunicorn = {version = "^19.9", optional = true}
psycopg2 = {version = "^2.8", optional = true}
mysqlclient = {version = "~1.4.4", optional = true}
python-dateutil = "~2.8.1"
urllib3 = "^1.26.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.7"
codecov = "^2.0"
pytest = "^4.5"
sphinx = "^3.4.3"
sphinx_rtd_theme = "~0.4.1"
selenium = "^3.141"

[tool.poetry.extras]
pgsql = ["psycopg2"]
gunicorn = ["gunicorn"]
mysql = ["mysqlclient"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
