[tool.poetry]
name = "rseadmin"
version = "0.2.0"
description = "RSE Admin Resource Allocation and Finance tool"
authors = ["Paul Richmond <p.richmond@sheffield.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-adminlte2 = "~0.4.3"
django-polymorphic = "^3.1"
gunicorn = {version = "^22.0", optional = true}
psycopg2 = "^2.9.9"
mysqlclient = {version = "^2", optional = true}
python-dateutil = "~2.9.0"
cryptography = "^39.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0"
codecov = "^2.0"
pytest = "^6.2"
sphinx = "^4.4"
sphinx_rtd_theme = "^1.0"
selenium = "^4.1"

[tool.poetry.extras]
pgsql = ["psycopg2"]
gunicorn = ["gunicorn"]
mysql = ["mysqlclient"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
